# PDFEdit

./: .cvsignore  .gitignore  COPYING  Changelog  FEATURES  Makefile  Makefile.flags.in  Makefile.in  Makefile.rules  Makefile.rules.in  README  TODO  aclocal.m4  config.pro.in.in  configure  configure.in  cygwin_build.bat  cygwinbuild  dist-exclude  getversion  maintains  makedist  post_configure  qsa_check  version_exclude
config/: ax_check_zlib.m4  boost_base.m4  boost_iostreams.m4  cppunit.m4  env.m4  freetype2.m4  macro.m4  pdfedit-core-dev.m4
doc/: .cvsignore  .gitignore  AUTHORS  Doxyfile  Makefile  Makefile.rules  README-Tango  README.cygwin  copyright.files  licence_header  licence_header_c  licence_header_c.files  licence_header_shell  licence_header_shell.files  pdfedit.css  pdoc_header.htm  versionfilter.sh
doc/design/: .gitignore  Makefile  design_doc.xml  general.xml  general_layers.xml  general_technologies.xml  general_utils.xml  general_xpdf.xml  glossary.xml  purpose.xml
doc/tools/: docbook2html  docbook2html_any  docbook2html_chunk  docbook2man.pl  docbook2pdf  docbook_xslt_paths  kbd_gen.pl  leaf2xml.pl  scripting.gen.pl
doc/user/: .cvsignore  .gitignore  Makefile  appendix-src.xml  application.xml  doc.css  docbook2man.pl  general.xml  generate  glossary.xml  install.xml  kbd_gen.pl  keyboard-src.xml  pdfedit.xml  purpose.xml  qsa-inputdialog.leaf  qsa-util.leaf  scripting-src.xml  scripting.gen.pl  scripting.xml  user_doc.xml
projects/: .gitignore  pdfedit.vc2005.sln  pdfedit.vc2008.sln  pdfedit.vc2010.sln  readme  releasenotes.txt
projects/gui/: gui.vcproj  gui.win32.vcproj  mpw.vcproj  pdfEd.vcxproj  qoutputdevices.vcproj  qsutil.vcproj
projects/kernel/: kernel.vcproj  kernel.vcxproj
projects/libs/: D050000L.PFB  N019003L.PFB  N019004L.PFB  N019023L.PFB  N019024L.PFB  N021003L.PFB  N021004L.PFB  N021023L.PFB  N021024L.PFB  N022003L.PFB  N022004L.PFB  N022023L.PFB  N022024L.PFB  S050000L.PFB  freetype221_D.lib  zlib1.lib
projects/packaging/: package.py
projects/pdfedit/: pdfedit.vcproj
projects/pdftops/: pdftops.vcproj
projects/qsa/: qsa-qt4.vcproj
projects/tests/: tests.vcproj
projects/tools/: add_image.vcproj  add_text.vcproj  add_to_sln.py  create_vcproj.py  delinearizator.vcproj  diplaycs.vcproj  displaycs.vcproj  flattener.vcproj  pagemetrics.vcproj  parse_object.vcproj  pdf_images.vcproj  pdf_object_comparer.vcproj  pdf_object_printer.vcproj  pdf_page_from_ref.vcproj  pdf_page_to_ref.vcproj  pdf_to_bmp.vcproj  pdf_to_text.vcproj  pdftops.vcproj  replace_text.vcproj
projects/vsprops/: arch_armv4i.vsprops  arch_mipsii.vsprops  arch_x86.vsprops  base.props  base.vsprops  config_debug.vsprops  config_release.vsprops  debug.props  debug.vsprops  exe.props  exe.vsprops  gui.props  guiqt4.props  kernel.props  kernel.vsprops  lib.props  lib.vsprops  release.props  release.vsprops  tests.vsprops  tools.props  tools.vsprops  win32.props  win32.vsprops  wince5.vsprops  wince6.vsprops  xpdf.props  xpdf.vsprops
projects/xpdf/: xpdf.vcproj  xpdf.vcxproj
src/: .cvsignore  .gitignore  Makefile  cannotation.h  cany.h  cgraphics.h  cobject.cc  cobject.h  config.h  coutline.h  cpage.h  cpdf.h  ctext.h  cxref.h  debug.h  init.qs  intproperty.cc  intproperty.h  iproperty.cc  iproperty.h  main.cc  pdfedit.cc  pdfedit.h  pdfedit.pro  pdfeditwindow.cc  pdfeditwindow.h  property.cc  propertyeditor.cc  propertyeditor.h  settings.cc  settings.h  stringproperty.cc  tbutton.cc  tbutton.h  toolbar.cc  toolbar.h  util.cc  util.h
src/gui/: .cvsignore  .gitignore  .headergen.ignore  Makefile.gui  MyWidget.cpp  MyWidget.h  OpenPdf.ui  Search.cpp  Search.h  Settings.ui  Tab.ui  TabPage.cpp  TabPage.h  aboutDialog.ui  aboutwindow.cc  aboutwindow.h  additemdialog.cc  additemdialog.h  annotationFrame.ui  annotdialog.cc  annotdialog.h  args.cc  args.h  base.cc  base.h  baseconsole.cc  baseconsole.h  basecore.cc  basecore.h  basegui.cc  basegui.h  bookmark.cpp  bookmark.h  booloption.cc  booloption.h  boolproperty.cc  boolproperty.h  callback.qs  colorPicker.cpp  colorPicker.ui  (+299 more)
src/guiqt4/: MyWidget.cpp  MyWidget.h  OpenPdf.ui  Search.cpp  Search.h  Settings.ui  Tab.ui  TabPage.cpp  TabPage.h  aboutDialog.ui  annotationFrame.ui  bookmark.cpp  bookmark.h  colorPicker.cpp  colorPicker.ui  colorpicker.h  comments.cpp  comments.h  convertPageRange.ui  debug.h  debugFrame.ui  exportImage.ui  fontWidget.cpp  fontWidget.h  globalfunctions.cpp  globalfunctions.h  imageFrame.ui  insertImage.cpp  insertImage.h  insertImage.ui  insertpagerange.cpp  insertpagerange.h  insertpagerange.ui  licence.txt  main.cpp  openpdf.cpp  openpdf.h  operatorData.cpp  operatorData.h  page.cpp  (+16 more)
src/kernel/: .cvsignore  .gitignore  Makefile  cannotation.cc  cannotation.h  carray.cc  carray.h  ccontentstream.cc  ccontentstream.h  cdict.cc  cdict.h  cgraphics.h  cinlineimage.cc  cinlineimage.h  cobject.cc  cobject.h  cobject2string.cc  cobject2xpdf.cc  cobjectI.h  cobjectcomplex.h  cobjectcomplexI.h  cobjecthelpers.cc  cobjecthelpers.h  cobjectsimple.h  cobjectsimpleI.h  cobjectstream.h  cobjectstreamI.h  contentschangetag.cc  contentschangetag.h  coutline.cc  coutline.h  cpage.cc  cpage.h  cpageannots.cc  cpageannots.h  cpageattributes.cc  cpageattributes.h  cpagechanges.cc  cpagechanges.h  cpagecontents.cc  (+69 more)
src/kpdf-kde-3.3.2/: .gitignore  Makefile.gui  QOutputDev.cpp  QOutputDev.h  QOutputDevPixmap.cpp  QOutputDevPixmap.h  qoutputdevices.pro
src/os/: Makefile  compiler.h  posix.h  win.h
src/qsa/: .cvsignore  .gitignore  Makefile  README  changes-1.1.4  changes-1.1.5  configure  qsa.pro
src/qsa-qt4/: .cvsignore  INSTALL  LICENSE.GPL  Makefile  README  changes-1.2.2  configure  qsa.pro
src/tests/: Makefile
src/tools/: .gitignore  Makefile  add_image.cc  add_text.cc  common.h  delinearizator.cc  displaycs.cc  flattener.cc  (+9 more)
testset/: mode_bad.conf  operator.conf
tools/: bench.sh  check_files.sh  cygwin_build.bat  cygwinbuild  fake_install_tools.sh  generate_lang.sh  generate_online_help.sh  headergen  headergen.txt  make_release  mass_patch.sh  release_check  rmdir.sh
(+828 files in other folders)
