dnl                    -*- Autoconf -*-
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
define([PDFEDIT_VERSION], patsubst(esyscmd(./getversion),[]))
AC_INIT([PDFedit], PDFEDIT_VERSION, [BUGTRACKER - http://pdfedit.petricek.net/bt/ ],[pdfedit])
AC_CONFIG_SRCDIR([src/gui/base.cc])
AC_CONFIG_HEADER([src/utils/aconf.h])


dnl check for QTDIR
CHK_ENV_VAR([QTDIR],[QTDIR environment variable must be set])
CHK_ENV_VAR_NOTICE([QMAKESPEC],[QMAKESPEC environment variable is not set - default will be used.])

dnl Checks for programs. (c++ compiler,...)
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl -------------------------------------------
dnl     BOOST support (http://www.boost.org)
dnl -------------------------------------------
AC_CHECK_HEADER([boost/smart_ptr.hpp], , [AC_MSG_ERROR([You need boost library to compile PDFedit])])
AC_CHECK_HEADER([boost/iostreams/stream.hpp], , [AC_MSG_ERROR([You need boost iostreams library to compile PDFedit])])

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([limits.h stdlib.h string.h unistd.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Release/debug mode. Debug is default (for now)
AC_ARG_ENABLE(release,
[AS_HELP_STRING([--enable-release],[Turn on compiler optimizations, turn off debugging symbols (enabled by default, disable with --disable-release)])],,[enable_release=yes])
AC_SUBST(enable_release)

dnl Enable observer debugging (disabled by default
AC_ARG_ENABLE(observer-debug,
[AS_HELP_STRING([--enable-observer-debug],[Turn on observer debugging (disabled by default)])],,[enable_observer_debug=no])
AC_MSG_CHECKING(whether to enable observer debugging)
if test "x$enable_observer_debug" = "xyes"; then
 EXTRA_CFLAGS="$EXTRA_CFLAGS -DOBSERVER_DEBUG"
 EXTRA_CXXFLAGS="$EXTRA_CXXFLAGS -DOBSERVER_DEBUG"
 AC_MSG_RESULT(yes)
else
 AC_MSG_RESULT(no)
fi
AC_SUBST(EXTRA_CFLAGS)
AC_SUBST(EXTRA_CXXFLAGS)

dnl Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([atexit floor ftruncate localtime_r memset mkdir strdup strerror strpbrk strstr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT([config.pro.in],[./post_configure])
